--- a/TABLE.html
+++ b/TABLE.html
@@ -52,5 +52,6 @@
         <td colspan="5">Lunch Break</td>
     </tr>
     </table>
+    <a href="./calculator.html>GO TO CALCULATOR>
 </body>
 </html>
