--- a/TABLE.html
+++ b/TABLE.html
@@ -10,7 +10,7 @@
     <h1>SCHOOL TIMETABLE</h1>
     <table border="2" width="40%" size="50">
         <tr>
-        <td colspan="6" <center>UGANDA MARTYRS SECONDARY SCHOOL TIMETABLE</center></td>
+        <th colspan="6" <center>UGANDA MARTYRS SECONDARY SCHOOL TIMETABLE</center></th>
         </tr>
     <tr>
         <td>Time</td>
