Fix HTML entity encoding for link in TABLE.html

--- a/TABLE.html
+++ b/TABLE.html
@@ -52,6 +52,6 @@
         <td colspan="5">Lunch Break</td>
     </tr>
     </table>
-    <a href="./Calculator.html>GO TO CALCULATOR</a>
+    <a href="./Calculator.html">GO TO CALCULATOR</a>
 </body>
 </html>
