Update content and images in index.html
Updated header and paragraph content to reflect university dedication. Changed image sources to new files.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body style="background-color:powderblue;">
-    <h2> html link</h2>
-    <p>html link are define with the a tag:</p>
+    <h2> UGANDA MARTYRS UNIVERSITY</h2>
+    <p>its dedication to a holistic and value-based education that aims to "make a difference" in society.</p>
  
     
     </body>
     </head> 
     <hr color="red" size="50">
     <marquee>
-    <img src="./pph.webp" width="150" height="200">
-    <img src="./pph2.webp" width="150" height="200">
-    <img src="./pph3.webp" width="150" height="200">
+    <img src="./photo1.webp" width="150" height="200">
+    <img src="./photo2.jpg" width="150" height="200">
+    <img src="./photo3.webp" width="150" height="200">
     <img src="./pph4.webp" width="150" height="200">
     </marquee>
     <button style="color:brown;">francis</button>
