--- a/index.html
+++ b/index.html
@@ -5,20 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body style="background-color:powderblue;">
     <h2> UGANDA MARTYRS UNIVERSITY</h2>
-    <p>its dedication to a holistic and value-based education that aims to "make a difference" in society.</p>
+    <p>its dedication to a holistic and value-based education that aims to "make a difference" in society.<b>Testimonials and reviews from various sources praise its supportive academic environment, well-equipped facilities, and commitment to producing graduates with strong ethical values. </b></p>
  
     
     </body>
     </head> 
     <hr color="red" size="50">
+    <th>Comprehensive student support and facilities </th>
+    <p>Education with a difference: The university's slogan, "Making a Difference," is actively pursued by encouraging its students and alumni to be positive contributors to society.</p>
+    <p>Holistic development: UMU is dedicated to educating the "head, heart, and hands" by developing the intellect, virtue, and skills of its students. </p>
     <marquee>
     <img src="./photo1.webp" width="150" height="200">
     <img src="./photo2.jpg" width="150" height="200">
     <img src="./photo3.webp" width="150" height="200">
-    <img src="./pph4.webp" width="150" height="200">
+    <img src="./photo2.webp" width="150" height="200">
     </marquee>
     <button style="color:brown;">francis</button>
     <hr>
+    <h3>COURSES OFFERED AT UGANDA MERTYRS UNIVERSITY</h3>
+    <P>Faculty of Agriculture<br>
+Faculty of Education<br>
+Faculty of Health Sciences<br>
+Faculty of Science<br>
+Faculty of the Built Environment
+School of Arts and Sciences</P>
     <ol>
         <li>coffee</li>
         <li>tea</li>
