--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="./photo1.webp" width="150" height="200">
     <img src="./photo2.jpg" width="150" height="200">
     <img src="./photo3.webp" width="150" height="200">
-    <img src="./photo2.webp" width="150" height="200">
+    <img src="./photo2.jpg" width="150" height="200">
     </marquee>
     <button style="color:brown;">francis</button>
     <hr>
@@ -29,36 +29,20 @@ Faculty of Health Sciences<br>
 Faculty of Science<br>
 Faculty of the Built Environment
 School of Arts and Sciences</P>
+    <h2>Core function</h2>
     <ol>
-        <li>coffee</li>
-        <li>tea</li>
-        <li>milk</li>
+        <li>Higher education: Universities are institutions for higher education where students pursue degrees, which usually take three to four years for an undergraduate bachelor's degree.</li>
+        <li>Higher education: Universities are institutions for higher education where students pursue degrees, which usually take three to four years for an undergraduate bachelor's degree.</li>
     </ol>
     <hr>
+     <h3>Key components</h3>
     <ul>
-        <li style="color:green;">coffee</li>
-        <li style="color:green;">tea</li>
-        <li style="color:white;">milk</li>
+        <li style="color:green;">Faculties and programs: Universities group their academic activities into faculties, offering a wide range of subjects and programs for students to choose from.</li>
+        <li style="color:green;">Student life: They provide a campus life that can include residential halls, dining facilities, and various social and extracurricular activities.</li>
+        <li style="color:white;">Campus environment: Universities often have modern libraries, sports facilities, and are sometimes recognized for their architecture and green spaces. k</li>
     </ul>
-    <p>
-        system software management and controls<br> the computers hardware and provids a platform <q>for application software to run and opoerating system.</q>
-
-        my name is rwotomiya francis.
-
-        i come from pader district.
-
-        northern uganda.
-    </p>
-    <pre>
-        my name is francis.
-
-        my district is pader twon council
-
-        my village is lagwai east
-
-    </pre>
-    <P style="color:red;">MY NAME IS FRANCIS</P>
-    <P style="color:green;">I COME FROM GULU CITY</P>
+    <P style="color:red;">BY FRANCIS</P>
+    <P style="color:green;">STUDENT NO: 2025-B071-22210</P>
     <P style="color:blue;">I LIKE PLAYING FOOTBALL</P>
    <a href="./Blog Posts.html">Go to Blog Post</a>
 
