--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     </body>
     </head> 
-    <hr color="red" size="50">
+    <hr color="red" size="25">
     <th>Comprehensive student support and facilities </th>
     <p>Education with a difference: The university's slogan, "Making a Difference," is actively pursued by encouraging its students and alumni to be positive contributors to society.</p>
     <p>Holistic development: UMU is dedicated to educating the "head, heart, and hands" by developing the intellect, virtue, and skills of its students. </p>
@@ -29,13 +29,13 @@ Faculty of Health Sciences<br>
 Faculty of Science<br>
 Faculty of the Built Environment
 School of Arts and Sciences</P>
-    <h2>Core function</h2>
+    <h2 style="orange;">Core function</h2>
     <ol>
         <li>Higher education: Universities are institutions for higher education where students pursue degrees, which usually take three to four years for an undergraduate bachelor's degree.</li>
         <li>Higher education: Universities are institutions for higher education where students pursue degrees, which usually take three to four years for an undergraduate bachelor's degree.</li>
     </ol>
     <hr>
-     <h3>Key components</h3>
+     <h3 style="color:blue;">Key components</h3>
     <ul>
         <li style="color:green;">Faculties and programs: Universities group their academic activities into faculties, offering a wide range of subjects and programs for students to choose from.</li>
         <li style="color:green;">Student life: They provide a campus life that can include residential halls, dining facilities, and various social and extracurricular activities.</li>
