--- a/index.html
+++ b/index.html
@@ -5,32 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body style="background-color:powderblue;">
     <h2> UGANDA MARTYRS UNIVERSITY</h2>
-    <p>its dedication to a holistic and value-based education that aims to "make a difference" in society.<b>Testimonials and reviews from various sources praise its supportive academic environment, well-equipped facilities, and commitment to producing graduates with strong ethical values. </b></p>
+    <p>Tts dedication to a holistic and value-based education that aims to "make a difference" in society.<b>Testimonials and reviews from various sources praise its supportive academic environment, well-equipped facilities, and commitment to producing graduates with strong ethical values. </b></p>
  
     
     </body>
     </head> 
-    <hr color="red" size="25">
-    <th>Comprehensive student support and facilities </th>
+    <h4>Comprehensive student support and facilities </h4>
     <p>Education with a difference: The university's slogan, "Making a Difference," is actively pursued by encouraging its students and alumni to be positive contributors to society.</p>
     <p>Holistic development: UMU is dedicated to educating the "head, heart, and hands" by developing the intellect, virtue, and skills of its students. </p>
-     <hr color="red" size="25">
+     <hr color="red" size="20">
     <marquee>
     <img src="./photo1.webp" width="150" height="200">
     <img src="./photo2.jpg" width="150" height="200">
     <img src="./photo3.webp" width="150" height="200">
     <img src="./photo2.jpg" width="150" height="200">
     </marquee>
-     <hr color="red" size="25">
+     <hr color="red" size="15">
     <button style="color:brown;">francis</button>
-    <h3 style="pink;">COURSES OFFERED AT UGANDA MERTYRS UNIVERSITY</h3>
+    <h3 style="color:pink;">COURSES OFFERED AT UGANDA MERTYRS UNIVERSITY</h3>
     <P>Faculty of Agriculture<br>
 Faculty of Education<br>
 Faculty of Health Sciences<br>
 Faculty of Science<br>
 Faculty of the Built Environment
 School of Arts and Sciences</P>
-    <h2 style="orange;">CORE FUNCTION</h2>
+    <h2 style="color:orange;">CORE FUNCTION</h2>
     <ol>
         <li>Higher education: Universities are institutions for higher education where students pursue degrees, which usually take three to four years for an undergraduate bachelor's degree.</li>
         <li>Higher education: Universities are institutions for higher education where students pursue degrees, which usually take three to four years for an undergraduate bachelor's degree.</li>
