--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body style="background-color:powderblue;">
-    <h2> UGANDA MARTYRS UNIVERSITY</h2>
+    <h1 center> UGANDA MARTYRS UNIVERSITY</h1>
     <p>Tts dedication to a holistic and value-based education that aims to "make a difference" in society.<b>Testimonials and reviews from various sources praise its supportive academic environment, well-equipped facilities, and commitment to producing graduates with strong ethical values. </b></p>
  
     
     </body>
     </head> 
-    <h4>Comprehensive student support and facilities </h4>
+    <h2>Comprehensive student support and facilities </h2>
     <p>Education with a difference: The university's slogan, "Making a Difference," is actively pursued by encouraging its students and alumni to be positive contributors to society.</p>
     <p>Holistic development: UMU is dedicated to educating the "head, heart, and hands" by developing the intellect, virtue, and skills of its students. </p>
      <hr color="red" size="20">
@@ -22,7 +22,7 @@
     </marquee>
      <hr color="red" size="15">
     <button style="color:brown;">francis</button>
-    <h3 style="color:pink;">COURSES OFFERED AT UGANDA MERTYRS UNIVERSITY</h3>
+    <h3 style="color:yellow;">COURSES OFFERED AT UGANDA MERTYRS UNIVERSITY</h3>
     <P>Faculty of Agriculture<br>
 Faculty of Education<br>
 Faculty of Health Sciences<br>
