--- a/Blog Posts.html
+++ b/Blog Posts.html
@@ -20,9 +20,9 @@
                 <p>A source of strength: True friends offer encouragement and lift you up when you're down, helping you find your way back to the light. </p>
                 <p>I think if I’ve learned anything about friendship, it’s to hang in, stay connected,</p>
                 <div class="footer1">
-                    <h4>4thRead</h4>
-                    <h4>789View</h4>
-                    <h4>895Comments</h4>
+                    <center><h4>4th<br>Read</h4></center>
+                    <center><h4>789<br>View</h4></center>
+                     <center><h4>895<br>Comments</h4></center>
                 </div>
             </div>
             <div class="card">
@@ -31,9 +31,9 @@
                 <p>A source of joy: Friends make life more pleasant, adding a layer of joy and adventure to everyday life. </p>
                 <p>I think if I’ve learned anything about friendship, it’s to hang in, stay connected,</p>
                   <div class="footer2">
-                    <h4>8thRead</h4>
-                    <h4>657View</h4>
-                    <h4>893Comments</h4>
+                     <center><h4>8th<br>Read</h4></center>
+                     <center><h4>657<br>View</h4></center>
+                     <center><h4>893<br>Comments</h4></center>
                 </div>
             </div>
             <div class="card">
@@ -42,9 +42,9 @@
                 <p>Unconditional acceptance: A good friend knows your flaws and weaknesses but loves you anyway, giving you the freedom to be your true self. </p>
                 <p>I think if I’ve learned anything about friendship, it’s to hang in, stay connected,</p>
                   <div class="footer3">
-                    <h4>7thRead</h4>
-                    <h4>657View</h4>
-                    <h4>893Comments</h4>
+                     <center><h4>7th<br>Read</h4></center>
+                     <center><h4>657<br>View</h4></center>
+                     <center><h4>893<br>Comments</h4></center>
                 </div>
             </div>
 
